2019-06-28  Jan Beulich  <jbeulich@suse.com>

	* config/i386/sse.md (vgf2p8affineinvqb_<mode><mask_name>,
	vgf2p8affineqb_<mode><mask_name>, vgf2p8mulb_<mode><mask_name>):
	Eliminate redundant alternative.

2019-06-28  Jan Beulich  <jbeulich@suse.com>

	* config/i386/sse.md (vgf2p8affineinvqb_<mode><mask_name>,
	vgf2p8affineqb_<mode><mask_name>): Drop % constraint modifier.
	Use vector_operand.

2019-06-28  Claudiu Zissulescu  <claziss@synopsys.com>

	* config/arc/arc.c (arc_rtx_costs): All short instructions are
	having a lower cost regardless of the speed option.

2019-06-28  Jan Beulich  <jbeulich@suse.com>

	* config/i386/sse.md (sse2_cvtpd2pi, sse2_cvttpd2pi): Use
	vector_operand plus, on both alternatives, "Bm" constraint.

2019-06-28  Dennis Zhang  <dennis.zhang@arm.com>

	* config/arm/arm.md: Remove redundant constraints from
	define_expand but leave reload_inm and reload_outm patterns
	untouched since they need special constraints to work.
	* config/arm/arm-fixed.md: Remove redundant constraints from
	define_expand.
	* config/arm/iwmmxt.md: Likewise.
	* config/arm/neon.md: Likewise.
	* config/arm/sync.md: Likewise.
	* config/arm/thumb1.md: Likewise.
	* config/arm/vec-common.md: Likewise.

2019-06-27  Ilia Diachkov  <ilia.diachkov@optimitech.com>

	* doc/install.texi: Document --disable-tm-clone-registry.

2019-06-27  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91024
	* gimplify.c (collect_fallthrough_labels): Ignore GIMPLE_PREDICT
	statements.

	PR tree-optimization/91010
	* tree-vect-stmts.c (scan_operand_equal_p): If offset1 == offset2,
	return true.  Otherwise, don't call operand_equal_p if offset1 or
	offset2 is NULL and just return false.

2019-06-27  Iain Sandoe  <iain@sandoe.co.uk>

	* config/rs6000/rs6000.c (darwin_rs6000_override_options): Honour
	user-specified float mode choice for kernel mode code.

2019-06-27  Iain Sandoe  <iain@sandoe.co.uk>

	* config/rs6000/darwin.h (ENDFILE_SPEC): Correct whitespace in the
	spec.
